@@ -1,3 +1,10 @@
+2010-04-28  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Html/PathCompletion.cs:
+	* MonoDevelop.Html/DocTypeCompletionData.cs:
+	* MonoDevelop.AspNet.Parser/SuggestedHandlerCompletionData.cs:
+	  Track API changes.
+
 2010-04-26  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.AspNet/AspNetSyntaxMode.cs:
